# firefly

./: .flake8  LICENSE  README.md  cr  demo.ipynb  demo.py  demo2.py  demo3.py  index.html  output.html  output2.html  pyproject.toml  table_with_css.html  test.md  toto.py
demo/: demo_orbit.py  demo_pink_noise.ipynb  earth_model.ipynb  error_model.ipynb  noise_analysis2.ipynb  noise_analysis3.ipynb  noise_modeling.ipynb  noise_modeling4.ipynb  position.ipynb  rotation_matrix.ipynb  toto.py  trajectory_sim.ipynb  vector_vs_numpy.ipynb
firefly/: __init__.py  exception.py  settings.py  types.py  validation.py
firefly/constants/: __init__.py  earth_model.py
firefly/earth/: __init__.py  atmosphere.py  earth_model.py  gravity.py
firefly/geography/: __init__.py  atmosphere.py  distance.py  gravity.py  position.py  rotation_matrix.py
firefly/html/: __init__.py  base.py  bases.py  fake_report.py  toc.py
firefly/markdown/: elements.py  mk.py  plot.py  table.py  tools.py
firefly/math/: __init__.py  allan.py  array.py  interp1D.py  noise.py  rotation_matrix.py
firefly/plot/: line.py
firefly/report/: motor_description.py
firefly/rocket/: elements.py  flow_rate.py  guidance.py  motor.py  propulsion.py  specific_impulse.py
firefly/tools/: files.py  images.py  string.py  strings.py
firefly/validation/: __exception.py  __generic.py  __init__.py  enum.py  fileIO.py  int.py  list.py  numpy.py  string.py  values.py
tests/: rotation_matrix.py
tests/constants/: test_earthmodel.py
tests/earth/: test_atmosphere.py  test_earthmodel.py  test_gravity.py
(+50 files in other folders)
