[tool.poetry]
name = "firefly"
version = "0.1.0"
description = "simulation of a space launch vehicle and navigation system"
authors = ["Antoine Barre <antoine.barre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
