[tool.poetry]
name = "firefly"
version = "0.1.0"
description = "simulation of a space launch vehicle and navigation system"
authors = ["Antoine Barre <antoine.barre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.2"
beartype = "^0.15.0"
typeguard = "^4.1.3"
pydantic = "^2.3.0"
typing-inspect = "^0.9.0"
nptyping = "^2.5.0"
matplotlib = "^3.7.2"
pandas = "^2.1.0"
allantools = "^2019.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
flake8 = "^6.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "."
]
